--- a/ImageFinderOrganizer/ImageFinderOrganizer/ImageFinderOrganizer.csproj
+++ b/ImageFinderOrganizer/ImageFinderOrganizer/ImageFinderOrganizer.csproj
@@ -59,6 +59,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseFinder.cs" />
     <Compile Include="ImageFinder.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -70,6 +71,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SafeWalk.cs" />
+    <Compile Include="VideoFinder.cs" />
   </ItemGroup>
   <ItemGroup>
     <Import Include="Microsoft.VisualBasic" />
