Support updating progress bar and tracking video count

--- a/ImageFinderOrganizer/ImageFinderOrganizer/ImageFinderOrganizer.csproj
+++ b/ImageFinderOrganizer/ImageFinderOrganizer/ImageFinderOrganizer.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseFinder.cs" />
+    <Compile Include="FileOrangizerArgs.cs" />
     <Compile Include="ImageFinder.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
